--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-    <h3>Where A Traditional Past Meets A Modern Future.</h3>
+    <h2>Where A Traditional Past Meets A Modern Future.</h2>
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="transit.jpg" alt="Modern Transit"/>
-      
+      <h3>Travel</h3>
     </div>
   </div>
 </body>
